Fix linterhtml error

--- a/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
@@ -35,6 +35,6 @@
 </div>
 <div class="modal-footer">
   <dashboard-btn-delete model="model" class="pull-left"></dashboard-btn-delete>
-  <button type=button class="btn btn-default" ng-disabled="_isLoading" ng-click="closeDialog()">Cancel</button>
-  <button type=button class="btn btn-primary" ng-disabled="editDashboardForm.$invalid || _isLoading" ng-click="toggleEditMode(model); closeDialog()">Save</button>
+  <button type="button" class="btn btn-default" ng-disabled="_isLoading" ng-click="closeDialog()">Cancel</button>
+  <button type="button" class="btn btn-primary" ng-disabled="editDashboardForm.$invalid || _isLoading" ng-click="toggleEditMode(model); closeDialog()">Save</button>
 </div>
