--- a/code/dev/parts/dashboard/widgets/apps-analytics/edit-config-apps-analytics.tpl.html
+++ b/code/dev/parts/dashboard/widgets/apps-analytics/edit-config-apps-analytics.tpl.html
@@ -1,4 +1,4 @@
-<div role="form" class='edit-web-analytics-config'>
+<div role="form" class="edit-web-analytics-config">
   <div class="form-group">
     <label for="domain">Application</label>
     <div app-select ng-model="application" on-select="onApplicationSelected()"></div>
