--- a/code/dev/parts/dashboard/widgets/dns-analytics/edit-config-dns-analytics-zone.tpl.html
+++ b/code/dev/parts/dashboard/widgets/dns-analytics/edit-config-dns-analytics-zone.tpl.html
@@ -1,4 +1,4 @@
-<div role="form" class='edit-web-analytics-config'>
+<div role="form" class="edit-web-analytics-config">
   <div class="form-group">
     <label for="domain">DNS Zone</label>
     <div dns-zone-select id="zone-select" ng-model="zone" on-select="onDNSZoneSelected()" select-one="true"></div>
