--- a/code/dev/parts/dns_zone_records/checklist-dns-zone-records/checklist-dns-zone-records.tpl.html
+++ b/code/dev/parts/dns_zone_records/checklist-dns-zone-records/checklist-dns-zone-records.tpl.html
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat='record in $ctrl.recordsList'>
+    <tr ng-repeat="record in $ctrl.recordsList">
       <td>{{record.domain}}</td>
       <td>{{record.type}}</td>
       <td>{{record.ttl}}</td>
