--- a/code/dev/parts/dns_zones/dns-zone-check-integration/dns-zone-check-integration.tpl.html
+++ b/code/dev/parts/dns_zones/dns-zone-check-integration/dns-zone-check-integration.tpl.html
@@ -11,3 +11,4 @@
       <dns-zone-check-integration-panel zone-id="$ctrl.zoneId" type-check="dns_servers" zone-config="$ctrl.zoneConfig" status="$ctrl.resultChecks.dns_servers"></dns-zone-check-integration-panel>
     </div>
   </uib-accordion>
+</div>
