--- a/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
+++ b/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
@@ -47,7 +47,7 @@
               <!-- Actions -->
               <a ng-click="$ctrl.onDuplicateWAFLocation($event,item)" class="btn btn-primary btn-xs duplicateWAFLocationBtn" opover-append-to-body="{{true}}"
                 popover-trigger="mouseenter" uib-popover="Duplicate WAF Location"><i class="fa fa-clone"></i> Duplicate Location</a>
-              <a href="" title="Remove Rule" title="Delete Location" ng-click="$ctrl.onDeleteWAFLocation($event,$index)">
+              <a href title="Delete Location" ng-click="$ctrl.onDeleteWAFLocation($event,$index)">
                 <i class="glyphicon glyphicon-remove"></i>
               </a>
             </div>
@@ -124,3 +124,5 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
