--- a/code/dev/parts/logshippers/list.html
+++ b/code/dev/parts/logshippers/list.html
@@ -61,8 +61,7 @@
                 </div>
                 <div class="form-group">
                   <button class="btn btn-success" ng-disabled="_loading" ng-click="onClickRefresh()">
-                    <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh
-                    </dutton>
+                    <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh</button>
                 </div>
               </div>
               <div class="pull-right">
