--- a/code/dev/parts/reports/top.html
+++ b/code/dev/parts/reports/top.html
@@ -28,63 +28,63 @@
             <uib-tab index="topRequests" heading="Top Most Requested Objects" select="isOpened['topRequests']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['topRequests']==true" fl-store-name='filterTopObjWeb' top-requests fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['topRequests']==true" fl-store-name="filterTopObjWeb" top-requests fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="topReferer" heading="Top Referers" select="isOpened['topReferer']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['topReferer']==true" fl-store-name='filterTopObjWeb' top-referer fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['topReferer']==true" fl-store-name="filterTopObjWeb" top-referer fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="topCacheHit" heading="Top Edge Cache Hits" select="isOpened['topCacheHit']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['topCacheHit']==true" fl-store-name='filterTopObjWeb' top-cache-hit fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['topCacheHit']==true" fl-store-name="filterTopObjWeb" top-cache-hit fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="topCacheMiss" heading="Top Edge Cache Misses" select="isOpened['topCacheMiss']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['topCacheMiss']==true" fl-store-name='filterTopObjWeb' top-cache-miss fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['topCacheMiss']==true" fl-store-name="filterTopObjWeb" top-cache-miss fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="top404" heading="Top '404 Not Found' Objects" select="isOpened['top404']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['top404']==true" fl-store-name='filterTopObjWeb' top-404 fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['top404']==true" fl-store-name="filterTopObjWeb" top-404 fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="top5xx" heading="Top Objects With 5XX Error Codes" select="isOpened['top5xx']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['top5xx']==true" fl-store-name='filterTopObjWeb' top-5xx fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['top5xx']==true" fl-store-name="filterTopObjWeb" top-5xx fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="topFailed " heading="Top Objects With Unsuccessful Completion Status" select="isOpened['topFailed']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['topFailed']==true" fl-store-name='filterTopObjWeb' top-failed fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['topFailed']==true" fl-store-name="filterTopObjWeb" top-failed fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="slowestFBT" heading="Objects With Slowest FBT" select="isOpened['slowestFBT']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['slowestFBT']==true" fl-store-name='filterTopObjWeb' slowest-fbt fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['slowestFBT']==true" fl-store-name="filterTopObjWeb" slowest-fbt fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
             <uib-tab index="slowestDownload" heading="Objects With Slowest Download Time" select="isOpened['slowestFBT']=true">
               <div class="row">
                 <div class="col-md-12">
-                  <div ng-if="isOpened['slowestFBT']==true" fl-store-name='filterTopObjWeb' slowest-download fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+                  <div ng-if="isOpened['slowestFBT']==true" fl-store-name="filterTopObjWeb" slowest-download fl-os="os" fl-device="device" fl-country="country" fl-browser="browser" ng-domain="domain"></div>
                 </div>
               </div>
             </uib-tab>
