--- a/code/dev/parts/ssl_names/new.html
+++ b/code/dev/parts/ssl_names/new.html
@@ -54,7 +54,7 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <label for="account_id" class="text-info" popover-trigger="mouseenter" popover-append-to-body="{{true}}" uib-popover="Select account name the SSL name should be associated with" class="fa fa-question-circle">
+              <label for="account_id" class="text-info" popover-trigger="mouseenter" popover-append-to-body="{{true}}" uib-popover="Select account name the SSL name should be associated with">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.accountId.$error" role="alert" ng-messages-multiple>
