--- a/code/dev/parts/waf-analytics/waf-analytics/top-attacked.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-analytics/top-attacked.tpl.html
@@ -3,7 +3,7 @@
     <uib-tab index="topAttackedURLs" heading="Top Attacked URLs" select="isOpened['topAttackedURLs']=true">
       <div class="row">
         <div class="col-md-12">
-          <div ng-if="isOpened['topAttackedURLs']==true" fl-store-name='filterTopAttack' waf-top-attacked-urls fl-country="countries"
+          <div ng-if="isOpened['topAttackedURLs']==true" fl-store-name="filterTopAttack" waf-top-attacked-urls fl-country="countries"
             ng-domain="domain"></div>
         </div>
       </div>
@@ -11,7 +11,7 @@
     <uib-tab index="topAttackerIPs" heading="Most Active Attacker IP Addresses" select="isOpened['topAttackerIPs']=true">
       <div class="row">
         <div class="col-md-12">
-          <div ng-if="isOpened['topAttackerIPs']==true" fl-store-name='filterTopAttack' waf-top-attacker-ips fl-country="countries"
+          <div ng-if="isOpened['topAttackerIPs']==true" fl-store-name="filterTopAttack" waf-top-attacker-ips fl-country="countries"
             ng-domain="domain"></div>
         </div>
       </div>
