--- a/code/dev/parts/dashboard/widgets/bluetriangletech/edit-bluetriangletech.html
+++ b/code/dev/parts/dashboard/widgets/bluetriangletech/edit-bluetriangletech.html
@@ -1,4 +1,4 @@
-<form role=form>
+<form role="form">
   <div class="form-group">
     <label for="domain">Domain <small>(with BTT key)</small></label>
     <div>
