--- a/code/dev/parts/dashboard/widgets/third-party-iframe/view-iframe-third-party-iframe.tpl.html
+++ b/code/dev/parts/dashboard/widgets/third-party-iframe/view-iframe-third-party-iframe.tpl.html
@@ -2,7 +2,7 @@
   <div class="alert alert-info" ng-if="!iframe.url">
     Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
   </div>
-  <iframe class="col-lg-12 col-md-12 col-sm-12 "
-    ng-if="iframe.url" class="adf-iframe" ng-style="{'height': iframe.config.height|| 'auto'};" ng-class="iframe.config.className"
+  <iframe class="col-lg-12 col-md-12 col-sm-12 adf-iframe"
+    ng-if="iframe.url" ng-style="{'height': iframe.config.height|| 'auto'};" ng-class="iframe.config.className"
     ng-src="{{iframe.url}}">Loading...</iframe>
 </div>
