--- a/code/dev/parts/dashboard/widgets/web-analytics/edit-config-web-analytics.tpl.html
+++ b/code/dev/parts/dashboard/widgets/web-analytics/edit-config-web-analytics.tpl.html
@@ -1,4 +1,4 @@
-<div role="form" class='edit-web-analytics-config'>
+<div role="form" class="edit-web-analytics-config">
   <div class="form-group">
     <label for="domain">Domain</label>
     <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
