--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg"></img>
+        <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg" alt="NS1 Logo">
         DNS Zones List
       </h2>
     </div>
