--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -234,7 +234,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleOriginSickTTL.$invalid && editForm.serveStaleOriginSickTTL.$dirty}" ng-if="$ctrl.rule.serve_stale.enable">
     <label class="col-sm-3 control-label">Stale Object TTL When Origin Is Down</label>
     <div class="col-md-9">
-      <input class="staleObjectTTLwhenOriginIsDown" type="number" class="form-control inline-block" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <input type="number" class="staleObjectTTLwhenOriginIsDown form-control inline-block" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" required> second(s)
       <label class="text-info" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users if origin server is down as detected by the origin health monitoring probe (range 0-10,000,000)">
         <i class="fa fa-question-circle"></i>
       </label>
