--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -121,7 +121,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.firstName.$invalid && editForm.firstName.$dirty }">
               <label for="firstName" class="col-sm-2 control-label">First Name *</label>
               <div class="col-sm-10 ">
-                <input type="text" class="form-control inline-block" required id="firstName" name="firstName" placeholder="First Name" ng-maxlength="30" ng-model="model.first_name" ng-pattern="USER_FIRST_NAME" ng-disabled="_loading" required>
+                <input type="text" class="form-control inline-block" id="firstName" name="firstName" placeholder="First Name" ng-maxlength="30" ng-model="model.first_name" ng-pattern="USER_FIRST_NAME" ng-disabled="_loading" required>
                 <label for="firstName" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Contact person first name (30 characters max)">
                   <i class="fa fa-question-circle"></i>
                 </label>
@@ -134,7 +134,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.lastName.$invalid && editForm.lastName.$dirty }">
               <label for="lastName" class="col-sm-2 control-label">Last Name *</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control inline-block" required id="lastName" name="lastName" placeholder="Last Name" ng-maxlength="30" ng-model="model.last_name" ng-pattern="USER_LAST_NAME" ng-disabled="_loading" required>
+                <input type="text" class="form-control inline-block" id="lastName" name="lastName" placeholder="Last Name" ng-maxlength="30" ng-model="model.last_name" ng-pattern="USER_LAST_NAME" ng-disabled="_loading" required>
                 <label for="lastName" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Contact person last name (30 characters max)">
                   <i class="fa fa-question-circle"></i>
                 </label>
@@ -147,7 +147,7 @@
                             editForm.phoneNumber.$dirty }">
               <label for="phoneNumber" class="col-sm-2 control-label">Phone Number *</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control inline-block" required id="phoneNumber" name="phoneNumber" placeholder="Phone Number" ng-maxlength="30" ng-model="model.phone_number" ng-disabled="_loading" required>
+                <input type="text" class="form-control inline-block" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" ng-maxlength="30" ng-model="model.phone_number" ng-disabled="_loading" required>
                 <label for="phoneNumber" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Contact phone number">
                   <i class="fa fa-question-circle"></i>
                 </label>
@@ -159,7 +159,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.contactEmail.$invalid &&  editForm.contactEmail.$dirty }">
               <label for="phoneNumber" class="col-sm-2 control-label">Contact Email *</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control inline-block" required id="contactEmail" name="contactEmail" placeholder="Contact Email" ng-model="model.contact_email" ng-disabled="_loading" required>
+                <input type="email" class="form-control inline-block" id="contactEmail" name="contactEmail" placeholder="Contact Email" ng-model="model.contact_email" ng-disabled="_loading" required>
                 <label for="phoneNumber" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Contact Email">
                   <i class="fa fa-question-circle"></i>
                 </label>
