--- a/code/dev/parts/reports/filters/filter-hours-periods.tpl.html
+++ b/code/dev/parts/reports/filters/filter-hours-periods.tpl.html
@@ -1,12 +1,12 @@
-<div class="row filter-hours-periods ng-show=" flOs && flCountry && flDevice ">
+<div class="row filter-hours-periods" ng-show=" flOs && flCountry && flDevice ">
   <div class="col-md-12 ">
     <form class="form-inline ">
       <div class="form-group ">
             <select class="form-control fixed " ng-model="ngFilters.delay">
-          <option value='1'>Last 1 Hour</option>
-          <option value='6'>Last 6 Hours</option>
-          <option value='12'>Last 12 Hours</option>
-          <option value='24'>Last 24 Hours</option>
+          <option value="1">Last 1 Hour</option>
+          <option value="6">Last 6 Hours</option>
+          <option value="12">Last 12 Hours</option>
+          <option value="24">Last 24 Hours</option>
         </select>
       </div>
 
@@ -14,7 +14,7 @@
         <select class="form-control fixed "
                 ng-model="ngFilters.country "
                 ng-options="key as item for (key, item) in flCountry ">
-          <option value=''>All Countries</option>
+          <option value="">All Countries</option>
         </select>
       </div>
 
@@ -22,7 +22,7 @@
         <select class="form-control fixed "
                 ng-model="ngFilters.os "
                 ng-options="item for item in flOs ">
-          <option value=''>All OS</option>
+          <option value="">All OS</option>
         </select>
       </div>
 
@@ -30,7 +30,7 @@
         <select class="form-control fixed "
                 ng-model="ngFilters.device "
                 ng-options="item for item in flDevice ">
-          <option value=''>All Devices</option>
+          <option value="">All Devices</option>
         </select>
       </div>
 
@@ -38,7 +38,7 @@
         <select class="form-control fixed "
                 ng-model="ngFilters.browser "
                 ng-options="item for item in flBrowser ">
-          <option value=''>All Browsers</option>
+          <option value="">All Browsers</option>
         </select>
       </div>
 
