--- a/code/dev/parts/staging-environment/staging-environment.tpl.html
+++ b/code/dev/parts/staging-environment/staging-environment.tpl.html
@@ -11,16 +11,20 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-body">
-            <p>Before sending ("publishing" in our terms) your updated domain configuration to the global network (and making it available for all end users of your website) you have a simple way to test the configuration in a "sandbox" ("staging" in our terms) environment. The environment is available for customers, similar to the global network configuration but is not used to serve real end users.</p>
+            <p>Before sending ("publishing" in our terms) your updated domain configuration to the global network (and making
+              it available for all end users of your website) you have a simple way to test the configuration in a "sandbox"
+              ("staging" in our terms) environment. The environment is available for customers, similar to the global network
+              configuration but is not used to serve real end users.</p>
             <!--  <div class="alert alert-info" ng-if="$ctrl._loading">
               <i class="glyphicon glyphicon-refresh spin" ng-if="$ctrl._loading"></i>&nbsp; Please waite few moment...
               </div> -->
-            <p>When you click on <strong>"Update"</strong> (not "Publish") button in the domain and SSL certificate configuration forms the updated configuration it sent to the following staging servers:</p>
+            <p>When you click on <strong>"Update"</strong> (not "Publish") button in the domain and SSL certificate configuration
+              forms the updated configuration it sent to the following staging servers:</p>
             <div ng-show="$ctrl._loading && $ctrl.stagingServers.length==0">
-            <p><i class="glyphicon glyphicon-refresh spin" ng-show="$ctrl._loading && $ctrl.stagingServers.length==0"></i></p>
+              <p><i class="glyphicon glyphicon-refresh spin" ng-show="$ctrl._loading && $ctrl.stagingServers.length==0"></i></p>
             </div>
             <div class="form-group staging-servers-list" ng-if="!$ctrl._loading && $ctrl.stagingServers.length >=2">
-               <p ng-repeat="server in $ctrl.stagingServers">{{$index+1}}) {{server.server_ip}}</p>
+              <p ng-repeat="server in $ctrl.stagingServers">{{$index+1}}) {{server.server_ip}}</p>
             </div>
             <div class="form-group staging-servers-list" ng-if="!$ctrl._loading &&$ctrl.stagingServers.length === 1">
               <p>{{$ctrl.stagingServers[0].server_ip}}</p>
@@ -28,9 +32,11 @@
             <p>You can access the staging servers and test new domain/SSL configuration using the following methods:
               <ol>
                 <li>
-                  <p>Update your local /etc/hosts file (or c:\windows\system32\drivers\etc\hosts for Windows users) to point the tested domain name to one of the staging IP addresses. For example, for domain "www.test-domain.com":</p>
+                  <p>Update your local /etc/hosts file (or c:\windows\system32\drivers\etc\hosts for Windows users) to point
+                    the tested domain name to one of the staging IP addresses. For example, for domain "www.test-domain.com":</p>
                   <pre class="console">  {{$ctrl.stagingServers[0].server_ip}} www.test-domain.com </pre>
-                  <p>After redirecting the domain name you can test the website in a regular browser window (don’t forget to clear the browser’s DNS cache) or using CLI command like "wget" or "curl".</p>
+                  <p>After redirecting the domain name you can test the website in a regular browser window (don’t forget to
+                    clear the browser’s DNS cache) or using CLI command like "wget" or "curl".</p>
                 </li>
                 <li>
                   <p>Using proxy configuration options for "wget" or "curl" commands.</p>
@@ -45,9 +51,13 @@
                   <pre class="console"> curl --resolve "www.test-domain.com:443:{{$ctrl.stagingServers[0].server_ip}}" -v https://www.test-domain.com/</pre>
                 </li>
               </ol>
-              <p>After verifying that the new configuration is working as expected you are welcome to send the configuration to the global network (and make available for your end users) by using <strong>"Publish"</strong> button in domain/SSL configuration form.</p>
+              <p>After verifying that the new configuration is working as expected you are welcome to send the configuration
+                to the global network (and make available for your end users) by using <strong>"Publish"</strong> button
+                in domain/SSL configuration form.</p>
+            </p>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
