--- a/code/dev/parts/waf_rules/list.html
+++ b/code/dev/parts/waf_rules/list.html
@@ -89,7 +89,7 @@
                 <div class="form-group">
                   <button class="btn btn-success" ng-disabled="_loading" ng-click="onClickRefresh()">
                     <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh
-                    </dutton>
+                    </button>
                 </div>
                 <div class="form-group hidden-xs">
                   <div class="col-xs-12"></div>
