Filter margins fixes

--- a/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
@@ -22,7 +22,7 @@
                 </form>
               </div>
               <div waf-filter-security-events ng-filters="vm.filters" fl-country="vm.countries" on-filter="vm.onDomainSelect()" fl-zones="vm.zonesList"
-                is-show-count="true" is-loading="vm._loading"></div>
+                is-show-count="true" class="waf-events-filters" is-loading="vm._loading"></div>
             </div>
           </div>
         </div>
