Add and use new directive - string-to-number

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -172,6 +172,7 @@
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/menu-toggle.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ng-animate-disabled.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/string-to-number.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/time-note-display.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/typeahead.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/focus-me.directive.js"></script>
