Added free month text to billing boxes

--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -4,6 +4,7 @@
       <div class="text-center">
         <h2 class="text">{{vendorConfig.companyNameShort}} Billing Plans</h2>
         <p class="text-muted">The world of mobile app and web acceleration is just a few minutes away.</p>
+        <p>1st Month Free.</p>
 
 <!--        <h4 class="text-info"><b>One month free trial - NO CREDIT CARD REQUIRED</b></h4>  -->
       </div>
