All modal close buttons are now consistent

--- a/code/dev/parts/profile/activity-log.html
+++ b/code/dev/parts/profile/activity-log.html
@@ -35,7 +35,7 @@
     </pre>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-default" type="button" ng-click="cancel()">Hide</button>
+    <button class="btn btn-primary" type="button" ng-click="cancel()">Close</button>
   </div>
 </script>
 <div class="container-fluid" ui-view="page">
