--- a/code/dev/parts/reports/modal/modal-billing-zones-details.tpl.html
+++ b/code/dev/parts/reports/modal/modal-billing-zones-details.tpl.html
@@ -35,5 +35,5 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-success" type="button" ng-click="cancel()">Close</button>
+  <button class="btn btn-primary" type="button" ng-click="cancel()">Close</button>
 </div>
