--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -88,6 +88,7 @@
       <div class="row col-xs-12 col-sm-12" ng-if="vendorConfig.enable_simplified_signup_process === false">
         <div style="padding-right: 30px;margin-bottom: 40px;" class="affix affix-top col-sm-offset-1 col-xs-offset-1 col-xs-11 col-sm-11 col-md-5">
           <div class="individual-plan" style="padding-bottom: 30px;" ng-if="currentPB.chargify_handle == $ctrl.model.billing_plan">
+            <p class="text-muted"><strong>1st Month Free.</strong></p>
             <div class="billing-plan">
               <div class="billing-plan-header">
                 <h2 class="billing-plan-title">{{currentPB.name}}</h2>
