Margins and paddings fixed

--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -11,7 +11,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-md-12">
-            <div class="pull-left form-inline">
+            <div class="pull-left form-inline inline-buttons-fix">
               <div class="form-group ">
                 <a ui-sref="^" ng-disabled="_loading" class="btn btn-info">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
