--- a/code/dev/parts/dns_zone_records/list.html
+++ b/code/dev/parts/dns_zone_records/list.html
@@ -89,7 +89,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <div class="form-inline pull-left">
+              <div class="form-inline pull-left inline-buttons-fix">
                 <div class="form-group">
                   <a ui-sref="^.dns_zones" class="btn btn-info">
                     <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To Zones List
@@ -117,7 +117,7 @@ so you will need to manually review the proposed DNS zone content and approve it
                 <form class="form-inline">
                   <div class="form-group">
                     <label for="search">Search:&nbsp;</label>
-                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter" ng-change="checkFilterPage()">&nbsp;&nbsp;
+                    <input type="text" class="form-control" id="search" placeholder="" style="margin-bottom: 0;" ng-model="filter.filter" ng-change="checkFilterPage()">&nbsp;&nbsp;
                     <i class="glyphicon glyphicon-remove" ng-show="filter.filter != ''" ng-click="filter.filter = ''"></i>
                   </div>
                 </form>
