--- a/code/dev/parts/shared/search/search.html
+++ b/code/dev/parts/shared/search/search.html
@@ -1,5 +1,5 @@
-<div style="display: inline-block; margin-left:  15px; width: 300px; vertical-align: super;">
-  <input class="form-control" name="searchInput" ng-model="searchTerm" typeahead-toggle="true" placeholder="Search..."
+<div style="display: inline-block; margin-left:  15px; margin-top: 10px; width: 300px; vertical-align: super;">
+  <input class="form-control global-search" name="searchInput" ng-model="searchTerm" typeahead-toggle="true" placeholder="Search..."
     typeahead-editable="false" typeahead-min-length="0" typeahead-on-select="searchItemSelected($item)" uib-typeahead="item as item.searchBarText for item in getFilteredList($viewValue)"
   />
 </div>
