Changed 'Close' buttons inside modals

--- a/code/dev/parts/azure-subscriptions/list.html
+++ b/code/dev/parts/azure-subscriptions/list.html
@@ -6,7 +6,7 @@
     <pre>{{model | json}}</pre>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-danger" type="button" ng-click="ok()">Close</button>
+    <button class="btn btn-primary" type="button" ng-click="ok()">Close</button>
   </div>
 </script>
 <!-- Note that element contain ui-view child page will be added here -->
