--- a/code/dev/parts/domains/modals/viewWAFRuleInfo.tpl.html
+++ b/code/dev/parts/domains/modals/viewWAFRuleInfo.tpl.html
@@ -6,5 +6,5 @@
   </textarea>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-success" type="button" ng-click="cancel()">Close</button>
+  <button class="btn btn-primary" type="button" ng-click="cancel()">Close</button>
 </div>
