Fixed Mobile Apps section buttons in small viewport

--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -63,7 +63,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <div class="pull-left form-inline">
+              <div class="pull-left form-inline fix-btns">
                 <div class="form-group">
                   <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success btn-vendor-new-app" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
                     <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New App
