--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -11,7 +11,7 @@
       <div class="panel-heading">
         <div class="row form-group">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="pull-left form-inline inline-buttons-fix">
+            <div class="pull-left form-inline inline-buttons-fix fix-btns">
               <div class="form-group">
                 <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="btn-group pull-left">
+            <div class="btn-group pull-left" >
               <button type="button" class="btn btn-primary" ng-class="{'disabled': !availableSDKVersions.length}">
                 Add New Version
               </button>
