--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -280,7 +280,7 @@
           <div class="col-md-12 footer-content">
             <a href="{{contactUsLink}}" target="_blank">Contact Us</a>
             <span class="pull-left copyright">{{vendorConfig.copyright}}
-            <br>Version {{portalVersion.replace(' ', '')}}/{{apiVersion}}
+            <br>Version {{portalVersion.trim()}}/{{apiVersion}}
             </span>
             <!-- <span class="pull-right version">Version {{portalVersion}}/{{apiVersion}} </span> -->
           </div>
